welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:6: error: '=>' expected but 'return' found.
    case(true, 7<hour<20) return false
                          ^