welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
  (talking,hour) match {
    case(true,hour<7) => return true
    case(true,hour>20) => return true
    case(false,_) => return false
    case(true, 7<hour<20) return false
  }
}